src/pages/games/styles/game-page.css
body {
    background-color: #160F1D;
    display: flex;
    font-family: var(--font-poppins), sans-serif;
}

.main-game-page {
    max-width: unset;
    padding: unset;
}

.left-sidebar {
    width: 268px;
}

.hero-image {
    width: 100%;
    aspect-ratio: 16 / 9;
    background: url("../assets/re-requiem/background-image2.png") no-repeat;
    background-size: contain;

    position: relative;
}

.hero-image::after {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: linear-gradient(180deg, rgba(11, 8, 16, 0.00) 22.36%, rgba(32, 12, 53, 0.72) 67.74%, var(--blue-violet-desat-600, #160F1D) 94.57%);
    z-index: 1;
}

.game-container {
    width: 100%;
    display: flex;
    gap: 60px;
    padding: 10px 30px 30px 30px;
    position: relative;
    top: -300px;
    z-index: 1;
}

.game-page-info {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.game-page-info > h1 {
    font-size: var(--font-size-4xl);
}

.game-tags {
    display: flex;
    width: 100%;
    align-items: flex-start;
    align-content: flex-start;
    gap: 8px;
    flex-wrap: wrap;
}

.tag > p {
    font-family: var(--font-abeezee), sans-serif;
    font-size: var(--font-size-base);
    padding: 4px 10px;
    border-radius: 100px;
    border: 1px solid var(--blueviolet-700);
    background-color: var(--blueviolet-700);
}

.game-page-description > p {
    font-size: var(--font-size-xl);
}

.game-media {
    display: flex;
    justify-content: center;
}

.rating-container {
    display: flex;
    width: 356px;
    flex-direction: column;
    gap: 30px;
}

.rating-wrapper {
    display: flex;
    align-items: center;
    gap: 20px;
}

.overall-score {
    display: flex;
    gap: 5px;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 183px;
    height: 168px;
    padding: 0 16px;
}

.ratings {
    display: flex;
    flex-direction: column;
    gap: 6px;
}

.cards {
    display: flex;
    flex-direction: column;
    gap: 6px;
}

.card-wrapper {
    display: flex;
    flex-direction: column;
    gap: 7px;
}

.rating-card-title {
    font-size: var(--font-size-base);
}

.score-card {
    display: flex;
    width: 153px;
    padding: 10px;
    align-items: center;
    gap: 5px;

    border-radius: 8px;
    background: var(--blue-violet-desat-800, #1D1728);

    /* PostCardShadow */
    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25), 0 4px 20px 0 #0B0810;
}

.score-card img {
    width: 30px;
    height: 32px;
}

.base-rating {
    font-size: var(--font-size-xs);
    font-style: normal;
    font-weight: 400;
    line-height: 125%;
}

.title-score {
    font-size: var(--font-size-xs);
    font-style: normal;
    font-weight: 275;
    line-height: 125%;
}

.rate-overall {
    font-size: 9.6rem;
    letter-spacing: -9.6px;
    padding-right: 11px;
    line-height: 90%;
}

.overall {
    text-wrap: nowrap;
    font-family: var(--font-abeezee), sans-serif;
    font-size: var(--font-size-lg);
    font-style: normal;
    font-weight: 400;
    line-height: 150%;
}

.price-wrapper {
    display: flex;
    flex-direction: column;
    gap: 26px;
}

.price-wrapper h3 {
    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25), 0 4px 20px #0B0810;
    font-size: var(--font-size-2xl);
    font-style: normal;
    font-weight: 400;
    line-height: 121.495%;
}

.stores-wrapper {
    width: 100%;
    display: flex;
    flex-wrap: wrap;
    gap: 14px;
}

.buy-game-card {
    display: flex;
    width: 171px;
    height: 38px;
    padding: 11px;
    justify-content: space-between;
    align-items: center;

    border-radius: 8px;
    background: var(--blue-violet-desat-800, #1D1728);
}

.buy-game-card p {
    font-size: var(--font-size-xs);
    font-style: normal;
    font-weight: 700;
    line-height: 125%;
}

.store-logo {
    width: 22px;
    height: 22px;
}

.logo-and-price {
    display: flex;
    gap: 5px;
    align-items: center;
}

@media (max-width: 1200px) {
    .game-container {
        flex-direction: column;
    }
    .rating-container{
        width: 100%;
    }
    .rating-wrapper {
        width: 100%;
    }
    .overall-score {
        margin: 0 auto;
        width: 100%;
    }
    .ratings {
        margin-left: auto;
    }
}

@media (max-width: 834px) {
    main {
        width: 74.444%;
    }
}

@media (max-width: 647px) {
    .left-sidebar {
        display: none;
    }
    main {
        width: unset;
    }
}

@media (max-width: 414px) {
    .rating-wrapper {
        flex-direction: column;
    }
}

